@@ -1,10 +1,10 @@
 #!perl
 
-use Test::More;
+use strict;
+use warnings;
+use 5.010;
 
-unless ( $ENV{RELEASE_TESTING} ) {
-    plan( skip_all => "these tests are for release candidate testing" );
-}
+use Test::More;
 
 eval 'use Test::Kwalitee qw(kwalitee_ok)';
 plan skip_all => 'Test::Kwalitee required for this test' if $@;
