@@ -9,6 +9,8 @@ Revision history for Run-Parts
 
         Polish README a little bit.
 
+        Move release tests to xt/release and drop %ENV checking code.
+
 0.08    2014-09-11 16:57:00+02:00
 
         Fix dist.ini to exclude emacs style backup files (except in
